Fix scrollbar for webkit browsers

--- a/styles/card-tricks.scss
+++ b/styles/card-tricks.scss
@@ -39,6 +39,20 @@ body {
   font-family: "Noto Sans Display", sans-serif;
 }
 
+* {
+  &::-webkit-scrollbar {
+    background-color: #222;
+    border-radius: 8px;
+    width: 12px;
+    height: 12px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #444;
+    border-radius: 8px;
+  }
+}
+
 p,
 h1,
 h2 {
